--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/divya-soni-14/IG-Week-2-Calculator",
   "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
